@@ -1,3 +1,7 @@
+2009-06-20  higepon  <higepon@users.sourceforge.jp>
+
+        * Misc/helloworld/main.cpp (class VirtioNet): VirtioNet works well.
+
 2009-05-30  higepon  <higepon@users.sourceforge.jp>
 
         * Misc/helloworld/main.cpp: various experimental about vring receive.
